# id-taker

./: .env  Cargo.toml  Config.toml  README.md
id-taker-core/: Cargo.toml
src/: config.rs  db.rs  id_generator.rs  main.rs  models.rs  routes.rs
