[package]
name = "id-taker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version = "1.17.0",features = ["full"]}
axum={version = "0.5.1"}
serde = { version = "1.0.188", features = ["derive"] }