[package]
name = "id-taker"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["id-taker-core","examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
axum = { version = "0.5.17", features = ["default", "axum-macros", "macros", "tower-log"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.56"
tracing-subscriber = "0.3.10"
tracing = "0.1.37"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "mysql", "macros"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tower = "0.4.13"
toml = "0.5"
dotenv = "0.15"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
